--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!-- Messages Preferences -->
     <string name="signature_title">Your signature</string>
     <string name="reply_title">Default reply action</string>
+    <string name="next_day_label">+1 day</string>
 
     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
