--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,15 @@
     <string name="signature_title">Your signature</string>
     <string name="reply_title">Default reply action</string>
     <string name="next_day_label">+1 day</string>
+    <string name="label_in_flight">In flight</string>
+    <string name="label_status_current">Status (current):</string>
+    <string name="label_classes_available">Classes available</string>
+    <string name="label_flyzed">FlyZED info for</string>
+    <string name="label_search">SEARCH</string>
+    <string name="label_new_search">NEW SEARCH</string>
+    <string name="label_origin_cuty">Origin city or airport</string>
+    <string name="label_destination_city">Destination city or airport</string>
+    <string name="label_passengers">Passengers</string>
 
     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
