--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">StaffAirlinesKotlin</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_favourites">Favourites</string>
     <string name="title_notifications">Notifications</string>
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
