--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="web_client_id">661840568265-pechqshf9aos58s0q2kl0irseuvud7j3.apps.googleusercontent.com</string>
+    <string name="cred_long_string">If you want to become an agent, post flight load data and get your own benefits, go to the <a href="https://t.me/DevStaffCommunityBot?start=123">telegram bot</a>. More about agents read <a href="https://staffairlines.com/flightclub">here</a>.</string>
+
 </resources>
